--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 
+    
+</head>
+
+
+<body>
+<section  class="sesao1">
+
+</section>
+
+<section  class="sessao2">
+
+</section>
+    
+<section  class="sessao3">
+
+</section>
+
+<section  class="sessao4">
+
+</section>
+
+<section  class="sessao5">
+
+</section>
+
+<section  class="sessao6">
+
+</section>
+
+<section  class="sessao7">
+
+</section>
+
+<footer  class="rodape">
+
+</footer>
+
+</body>
+
+
+
+
+</html>
