--- a/index.html
+++ b/index.html
@@ -1,47 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    
+
 </head>
 
 
 <body>
-<section  class="sesao1">
+    <section class="sesao1">
+        <img src="Background (1).png" alt="Background">
+        <img src="computador (1).png" alt="combo">
 
-</section>
 
-<section  class="sessao2">
 
-</section>
-    
-<section  class="sessao3">
+    </section>
 
-</section>
+    <section class="sessao2">
+        <img src="" alt="">
 
-<section  class="sessao4">
 
-</section>
+    </section>
 
-<section  class="sessao5">
+    <section class="sessao3">
+        <img src="" alt="">
 
-</section>
 
-<section  class="sessao6">
 
-</section>
+    </section>
 
-<section  class="sessao7">
+    <section class="sessao4">
+        <img src="" alt="">
 
-</section>
+    </section>
 
-<footer  class="rodape">
+    <section class="sessao5">
+        <img src="tv (1).png" alt="tv">
+        <img src="computador (1).png" alt="computador">
+        <img src="celular (1).png" alt="celular">
 
-</footer>
+    </section>
+
+
+
+    </section>
+
+    </section>
+
+    <footer class="rodape" </footer>
 
 </body>
 
