--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 
 
 <body>
-    <section class="sesao1">
+    <section class="sesao1 principal container">
+    <div>
+        <h1 class="container__caixa">com o combo+, vocẽ pode aproveitar a alura+ e o alura lingua por um preço
+unico</h1>
+
+        </div>
+<img src="Background (1).png" alt="Background">
+
         <img src="Background (1).png" alt="Background">
         <img src="computador (1).png" alt="combo">
 
