--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ unico</h1>
         <img src="Background (1).png" alt="Background">
         <img src="computador (1).png" alt="combo">
 <a href="www.alura.com.br" class="container__botao">assine por 12x de r$120,00*</a>
-<a href="www.alura.com.br" class="container__botao">assinar</a>
+<a href="www.alura.com.br" class="container__botao">assinar somente o alura</a>
 
 
     </section>
