--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ unico</h1>
         <img src="computador (1).png" alt="combo">
 <a href="www.alura.com.br" class="container__botao">assine por 12x de r$120,00*</a>
 <a href="www.alura.com.br" class="container__botao">assinar somente o alura</a>
-
+<p class="conteiner__aviso">*o prço variar caso a assinatura seja feita em outros planos</p>
 
     </section>
 
