--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@ unico</h1>
 <a href="www.alura.com.br" class="container__botao">assine por 12x de r$120,00*</a>
 <a href="www.alura.com.br" class="container__botao">assinar somente o alura</a>
 <p class="conteiner__aviso">*o prço variar caso a assinatura seja feita em outros planos</p>
-
     </section>
 
 
@@ -35,7 +34,16 @@ unico</h1>
     
 
     <section class="sessao2">
-        <img src="" alt="">
+        <img src="Plataformas (1).png" alt="Plataformas" class="secundario__imagem">
+
+<div class="container__descriçao">   
+<h2  class="descriçao__titulo">assista do su jeito</h2>
+<p class="descriçao__texto">aproveite a tela grande da tv au assista no tablet, leptop, celular e outros aparelhos. nossa seleçao de
+    cursos nao para de crescer
+</p>
+
+</div>
+
 
 
     </section>
