--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
 
     
-     <img src="telas.png" alt="telas" class="secudario__imagem">
+     <img src="telas.png" alt="tela do alura+ e alura" class="secudario__imagem">
 
  </section>
 
