--- a/index.html
+++ b/index.html
@@ -66,15 +66,22 @@
 
 
     <section class="sessao4"></section>
-        <img src="notebok.png" alt="notebok">
+        <img src="notebok.png" alt="notebok com pagina domcurso html5 e css3 da alura aberta"
+        class="secundario__imagem">
+<div class="container__descriçao"
+<h2 class="descriçao__titulo">baixe seus cursos</h2>
+<p class="descriçao__texto">baixe assista quando e onde quiser. assim, seus favoritps estao sempre <command>voçe,ate mesmo sem internet.</p>
+    <div>
 
     </section>
 
     <section class="sessao5"></section>
+    <h2 class="dispositivos__titulo">disponivel nos seus dispositivos favoritos</h2>
+<ul class="dispositivos__lista">
+    <li>
     
-        <img src="tv (1).png" alt="tv">
-        <img src="computador (1).png" alt="computador">
-        <img src="celular (1).png" alt="celular">
+
+
 
     </section>
 
