--- a/index.html
+++ b/index.html
@@ -52,46 +52,59 @@
     <section class="sessao3 container secundario">
         <div class="container__descriçao">
             <p class="descriçao__texto">
-            so o combo + ofrece alura+ e alura lingua juntos para voce ter acesso a cursos
-     de diversas areastecnologia e aprender ingles ou espanhol, de onde e como quiser.
+                so o combo + ofrece alura+ e alura lingua juntos para voce ter acesso a cursos
+                de diversas areastecnologia e aprender ingles ou espanhol, de onde e como quiser.
             </p>
             <a href="www.alura.com.br" class="container__botao secundario__botao">assine o combo+</a>
 
         </div>
 
-    
-     <img src="telas.png" alt="tela do alura+ e alura" class="secudario__imagem">
 
- </section>
+        <img src="telas.png" alt="tela do alura+ e alura" class="secudario__imagem">
+
+    </section>
 
 
     <section class="sessao4"></section>
-        <img src="notebok.png" alt="notebok com pagina domcurso html5 e css3 da alura aberta"
-        class="secundario__imagem">
-<div class="container__descriçao"
-<h2 class="descriçao__titulo">baixe seus cursos</h2>
-<p class="descriçao__texto">baixe assista quando e onde quiser. assim, seus favoritps estao sempre <command>voçe,ate mesmo sem internet.</p>
-    <div>
+    <img src="notebok.png" alt="notebok com pagina domcurso html5 e css3 da alura aberta" class="secundario__imagem">
+    <div class="container__descriçao" <h2 class="descriçao__titulo">baixe seus cursos</h2>
+        <p class="descriçao__texto">baixe assista quando e onde quiser. assim, seus favoritps estao sempre <command>
+                voçe,ate mesmo sem internet.</p>
+        <div>
 
-    </section>
+            </section>
 
-    <section class="sessao5"></section>
-    <h2 class="dispositivos__titulo">disponivel nos seus dispositivos favoritos</h2>
-<ul class="dispositivos__lista">
-    <li>
-    
+            <section class="sessao5"></section>
+            <h2 class="dispositivos__titulo">disponivel nos seus dispositivos favoritos</h2>
+            <ul class="dispositivos__lista">
+                <li>
+                    <img src="img/tv.pong" alt="icone de televisao">
+                    <h3 class="lista__item">tv</h3>
+                </li>
+                <li>
+                    <img src="img/computador.png" alt="icone de computador">
+                    <h3 class="lista__item">computador</h3>
+                </li>
+                <li>
+                    <img src="img/celular.png" alt="icone de celular">
+                    <h3 class="lista__item">celular</h3>
+                </li>
+            </ul>
+            </section>
+            <footer class="rodape">
+                <img src="img/logo.png" alt="alura+" class="rodape__logo">
 
 
 
-    </section>
+                </section>
 
 
 
-    </section>
+                </section>
 
-    </section>
+                </section>
 
-    <footer class="rodape" </footer>
+                <footer class="rodape" </footer>
 
 </body>
 
