--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 
 <head>
+    <title>alura plus</title>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=inter:wght@400;700&display=swap"
+    rel="stylesheet">
 </head>
-
 
 <body>
     <section class="sesao1 principal container">
@@ -91,9 +92,23 @@
                 </li>
             </ul>
             </section>
+
             <footer class="rodape">
                 <img src="img/logo.png" alt="alura+" class="rodape__logo">
+<ul class="rodape__lista">
+<li class="lista__link">
+ <a href="#">idioma</a>   
+</li>
+<li class="lista__link">
+    <a href="#"></a>dispositivos compativeis</a>
+    </li>
+<li class="lista__link">
+    <a href="#">contrato de assinatura</a>
 
+</li>
+
+
+</ul>
 
 
                 </section>
